# libinsane

./: .gitignore  .gitlab-ci.yml  ChangeLog  Makefile  README.markdown  activate_test_env.sh  check_sparse.py  deliver_doc.sh  meson.build  rclone.conf  twain.h_LICENSE
doc/: index.html
libinsane/: meson.build
libinsane-gobject/: meson.build
libinsane-gobject/doc/: libinsane_gobject-gtkdoc.xml  meson.build
libinsane-gobject/src/: meson.build
libinsane/include/libinsane/: normalizers.h
libinsane/tests/: meson.build
subprojects/libinsane/: meson.build
subprojects/libinsane-gobject/: meson.build
subprojects/libinsane-gobject/doc/: gtkdocentities.ent  libinsane_gobject-gtkdoc.xml  meson.build
subprojects/libinsane-gobject/examples/: list_devices.py  list_options.py  scan.py
subprojects/libinsane-gobject/include/: meson.build
subprojects/libinsane-gobject/include/libinsane-gobject/: capability.h  device_descriptor.h  img_format.h  item.h  item_private.h  libinsane-api.h  option_descriptor_private.h  scan_session.h  scan_session_private.h
subprojects/libinsane-gobject/src/: device_descriptor.c  enums.c.template  enums.h.template  error.c  item.c  libinsane-api.c  log.c  meson.build  option_descriptor.c  scan_parameters.c  scan_session.c
subprojects/libinsane-gobject/tests/: test_hw.py
subprojects/libinsane/bmp/: bmp_parser.c  meson.build
subprojects/libinsane/doc/: api_multiplexer.dox  behavior_normalizations.dox  dependencies.dox  dev_rules.dox  doxygen.conf.in  gobject_introspection_api.dox  howto_c.dox  howto_general.dox  howto_python.dox  index.dox  install.dox  introduction.dox  item_tree.drawio  libinsane_doxygen.css  logging.dox  meson.build  normalized_api.dox  packaging.dox  quickstart.dox  safebet.dox  scan_apis.dox  structure.dox  tickets.dox  workarounds.dox
subprojects/libinsane/examples/: lis_scan.c  meson.build
subprojects/libinsane/include/: meson.build
subprojects/libinsane/include/libinsane/: capi.h  constants.h  dumb.h  error.h  log.h  normalizers.h  str2impls.h  util.h  workarounds.h
subprojects/libinsane/src/: basewrapper.c  basewrapper.h  bmp.c  bmp.h  endianess.h  gen_version_file.sh  log.c  meson.build  multiplexer.c  safebet.c  str2impls.c  util.c  version.h.in
subprojects/libinsane/src/bases/: dumb.c  sane.c
subprojects/libinsane/src/bases/twain/: capabilities.c  capabilities.h  twain.c
subprojects/libinsane/src/bases/wia/: properties.c  properties.h  transfer.c  transfer.h  util.c  util.h  wia2.h  wia_ll.c
subprojects/libinsane/src/normalizers/: all_opts_on_all_sources.c  bmp.c  bmp.h  bmp2raw.c  clean_dev_descs.c  clean_dev_model_char.c  clean_dev_model_from_manufacturer.c  min_one_source.c  opt_aliases.c  raw24.c  raw24.h  resolution.c  safe_defaults.c  source_names.c  source_nodes.c  source_types.c
subprojects/libinsane/src/workarounds/: cache.c  check_capabilities.c  dedicated_process.c  dedicated_thread.c  lamp.c  one_page_flatbed.c  opt_mode.c  opt_names.c  opt_values.c  set_opt_late.c
subprojects/libinsane/src/workarounds/dedicated_process/: master.c  pack.c  pack.h  protocol.c  protocol.h  worker.c  worker.h
subprojects/libinsane/tests/: main.c  main.h  meson.build  tests_multiplexer.c  tests_normalizer_all_opts_on_all_sources.c  tests_normalizer_bmp2raw.c  tests_normalizer_clean_dev_descs.c  tests_normalizer_min_one_source.c  tests_normalizer_opt_aliases.c  tests_normalizer_raw24.c  tests_normalizer_resolution.c  tests_normalizer_safe_defaults.c  tests_normalizer_source_names.c  tests_normalizer_source_nodes.c  tests_normalizer_source_types.c  tests_opt_mode.c  tests_sane.c  tests_twain.c  tests_wia_ll.c  tests_workaround_cache.c  tests_workaround_check_capabilities.c  tests_workaround_dedicated_process.c  tests_workaround_dedicated_process_pack.c  tests_workaround_dedicated_thread.c  tests_workaround_lamp.c  tests_workaround_one_page_flatbed.c  tests_workaround_opt_mode.c  tests_workaround_opt_names.c  tests_workaround_opt_values.c  tests_workaround_set_opt_late.c  util.h
