INSANE_GOBJECT_HEADERS = files(
    'libinsane-gobject/capability.h',
    'libinsane-gobject/constraint.h',
    'libinsane-gobject/device_descriptor.h',
    'libinsane-gobject/error.h',
    'libinsane-gobject/img_format.h',
    'libinsane-gobject/item.h',
    'libinsane-gobject/item_type.h',
    'libinsane-gobject/libinsane-api.h',
    'libinsane-gobject/log.h',
    'libinsane-gobject/option_descriptor.h',
    'libinsane-gobject/scan_parameters.h',
    'libinsane-gobject/scan_session.h',
    'libinsane-gobject/unit.h',
)

install_headers(INSANE_GOBJECT_HEADERS, subdir: 'libinsane-gobject')
libinsane_gobject_inc = include_directories('.')
